--- a/lesson1.html
+++ b/lesson1.html
@@ -167,7 +167,90 @@
 			</table>
 		</div>
 
+		<hr>
 
+		<div>
+			<h1> Form </h1>
 
+			<form>
+				<label> First Name: </label>
+				<input type="text" name="">
+
+				<label> Last Name: </label>
+				<input type="text">
+				<br><br>
+
+				<label> Phone Number: </label>
+				<input type="number" name="">
+				<br><br>
+
+				<label> Email: </label>
+				<input type="email" name="">
+
+				<label> Password: </label>
+				<input type="password" name="">
+				<br><br>
+
+				<label> Address: </label>
+				<textarea></textarea>
+				<br><br>
+
+				<label> Gender: </label>
+				
+				<input type="radio" name="gender" id="male_radio">
+				<label for="male_radio">Male</label>
+
+				<input type="radio" name="gender" id="female_radio">
+				<label for="female_radio">Female</label>
+				<br><br>
+
+				<label> Programming Language </label>
+
+				<input type="checkbox" name="pl" id="pl1_checkbox">
+				<label for="pl1_checkbox">HTML</label>
+
+				<input type="checkbox" name="pl" id="pl2_checkbox">
+				<label for="pl2_checkbox">CSS</label>
+
+				<input type="checkbox" name="pl" id="pl3_checkbox">
+				<label for="pl3_checkbox">Javascript</label>
+
+				<input type="checkbox" name="pl" id="pl4_checkbox">
+				<label for="pl4_checkbox">JQuery</label>
+
+				<input type="checkbox" name="pl" id="pl5_checkbox">
+				<label for="pl5_checkbox">MySQL</label>
+
+				<input type="checkbox" name="pl" id="pl6_checkbox">
+				<label for="pl6_checkbox">PHP</label>
+				<br><br>
+
+				<label> Color: </label>
+				<input type="color" name="">
+				<br><br>
+
+				<label> Date: </label>
+				<input type="date" name="">
+				<br><br>
+
+				<label> Attachment: </label>
+				<input type="file" name="">
+				<br><br>
+
+				<label> Select Course: </label>
+				<select>
+					<option value="course1"> Course1: Application Design </option>
+					<option value="course2"> Course2: Building Web Application in PHP & Laravel </option>
+					<option value="course3"> Course3: PHP Project Practice </option>
+					<option value="course4"> Course4: Laravel Project Practice </option>
+				</select>
+				<br><br>
+
+				<input type="submit" value="Send">
+				<input type="reset" value="reset">
+
+			</form>
+		</div>
+		<br><br><br><br>
 	</body>
 </html>
